[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/enemies/level1/velo2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/level1/velo3.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/level1/velo1.png" type="Texture" id=3]
[ext_resource path="res://enemy/level1/enemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.5, 33.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.5, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.5, 26.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "dead",
"speed": 6.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 0, 1 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
direction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.24999, 8.5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 34, 2 )
enabled = true
cast_to = Vector2( 0, 43 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 2.5, -25 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 2.5, 8.5 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, -8 )
scale = Vector2( 2.60294, 2.60294 )
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Immortality_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Immortality_timer" to="." method="_on_Immortality_timer_timeout"]
